<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Motorica Start</string>
    <string name="helloWorld">open</string>
    <string name="helloWorld2">close</string>
    <string name="helloWorld3">stop</string>
    <string name="gesture1">gesture 1</string>
    <string name="gesture2">gesture 2</string>
    <string name="gesture3">gesture 3</string>
    <string name="off_update">off schedules</string>
    <string name="on_update">on schedules</string>
    <string name="gesture4">parting position</string>
    <string name="scan_again">SCANNING AGAIN</string>
    <string name="activity_scan_paired_text">Connected devices:</string>
    <string name="bluetooth_scanning">SCANNING…</string>
    <string name="bluetooth_scan_finished" />
    <string name="bluetooth_pairing">connection…</string>
    <string name="bluetooth_paired">Device is connected.</string>
    <string name="bluetooth_unpaired">Device is disconnected.</string>
    <string name="bluetooth_connected">Device is connected.</string>
    <string name="bluetooth_connecting">Connection…</string>
    <string name="bluetooth_disconnected">Device is not connected.</string>
    <string name="bluetooth_connect_in_3sec">It was not succeeded to be connected…</string>
    <string name="bluetooth_turning_on">Bluetooth turned off…</string>
    <string name="title_home">Gestures</string>
    <string name="title_dashboard">Sensors</string>
    <string name="valueCH1">TextView</string>
    <string name="ch1">CH1:</string>
    <string name="_100">100</string>
    <string name="ch1_on">CH1 on:</string>
    <string name="ch1_off">CH1 off:</string>
    <string name="mv">mV</string>
    <string name="mv2">mV</string>
    <string name="mv3">mV</string>
    <string name="_1250">1250</string>
    <string name="_2500">2500</string>
    <string name="state_view">lolol</string>
    <string name="title_activity_gripper_settings">GripperSettings</string>
    <string name="action_Trigger0">service menu</string>
    <string name="action_Trigger1">classical</string>
    <string name="action_Trigger2">trigger</string>
    <string name="action_Trigger3">trigger inverted</string>
    <string name="action_Trigger4" />
    <string name="action_Trigger5" />
    <string name="action_Trigger6" />
    <string name="action_Trigger7" />
    <string name="action_Trigger8">classical inverted</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="lesson_eight_error_could_not_create_vbo">Could not create vertex buffer object: %s</string>
    <string name="lesson_eight_error_unknown">Unknown error: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illumination">Illumination</string>
    <string name="closing">closing</string>
    <string name="opening">opening</string>
    <string name="battery_power">Battery power:</string>
    <string name="compressive_force">Compressive force</string>
    <string name="blocking">Blocking</string>
    <string name="roughness_of_sensors">Roughness of sensors</string>
    <string name="I_real">I real:</string>
    <string name="I_max">I max:</string>
    <string name="mA">mA</string>
    <string name="inverting">Inverting</string>
    <string name="internal_ADC">Internal ADC</string>
    <string name="save">save</string>
    <string name="single_channel_by_sensor_1">single channel by sensor 1</string>
    <string name="single_channel_by_sensor_2">single channel by sensor 2</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="ok">OK</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="settings_profile_name_dialog_title">Rename profile</string>
    <string name="settings_profile_name_dialog_field_label">Profile name</string>
    <string name="settings_profile_name_dialog_cancel">Cancel</string>
    <string name="settings_profile_name_dialog_save">Save</string>
    <string name="settings_profile_rename_action">Rename profile</string>
    <string name="password">password</string>
    <string name="calibration">Calibration:</string>
    <string name="number_of_channel">Number of channel:</string>
    <string name="speed">Speed</string>
    <string name="angle">Angle</string>
    <string name="input_address">Input address</string>
    <string name="input_temp">Input temp</string>
    <string name="current_control_data">Current control data</string>
    <string name="set">set</string>
    <string name="open">open</string>
    <string name="stop">stop</string>
    <string name="close">close</string>
    <string name="current_control_timeout">Current control timeout</string>
    <string name="x100_ms">x100 ms</string>
    <string name="current_control">Current control</string>
    <string name="currents">currents</string>
    <string name="ete_calib">EtE   calib</string>
    <string name="eeprom_save">EEPROM save</string>
    <string name="angle_fix">angle fix</string>
    <string name="input_open_angle">Input open angle</string>
    <string name="input_close_angle">Input close angle</string>
    <string name="input_wide_angle">Input wide angle</string>
    <string name="magnet_invert">Magnet invert</string>
    <string name="revers_motor">Revers motor</string>
    <string name="zero_crossing">Zero crossing</string>
    <string name="speed_with_space">"speed: "</string>
    <string name="use_gesture">use gesture</string>
    <string name="leave">Exit?</string>
    <string name="no">no</string>
    <string name="not_the_right_password">password not right</string>
    <string name="select_channel">"select channel "</string>
    <string name="admission_of_inquiry_of_updating">admission of inquiry of updating</string>
    <string name="click_to_edit_start_and_end_states">Click to edit start and end states</string>
    <string name="control_of_an_open_state">Control of an open state</string>
    <string name="control_of_the_closed_state">Control of the closed state</string>
    <string name="allows_you_to_set_the_position_of_the_maximum_open_state">Allows you to set the position of the maximum open state</string>
    <string name="allows_you_to_set_the_position_of_the_maximum_closed_state">Allows you to set the position of the maximum closed state</string>
    <string name="connection_is_absent">connection is absent</string>
    <string name="off_schedules">off schedules</string>
    <string name="on_schedules">on schedules</string>
    <string name="magic_checkbox">Magic checkbox</string>
    <string name="speed_increment">speed increment</string>
    <string name="disable_angel_control">disable angel control</string>
    <string name="gesture_1_btn">gesture №1</string>
    <string name="gesture_2_btn">gesture №2</string>
    <string name="gesture_3_btn">gesture №3</string>
    <string name="gesture_4_btn">gesture №4</string>
    <string name="gesture_5_btn">gesture №5</string>
    <string name="gesture_6_btn">gesture №6</string>
    <string name="gesture_7_btn">gesture №7</string>
    <string name="gesture_8_btn">gesture №8</string>
    <string name="gesture_9_btn">gesture №9</string>
    <string name="gesture_10_btn">gesture №10</string>
    <string name="gesture_11_btn">gesture №11</string>
    <string name="gesture_12_btn">gesture №12</string>
    <string name="gesture_13_btn">gesture №13</string>
    <string name="gesture_14_btn">gesture №14</string>
    <string name="gesture_15_btn">gesture №15</string>
    <string name="gesture_16_btn">gesture №16</string>
    <string name="gesture_17_btn">gesture №17</string>
    <string name="gesture_18_btn">gesture №18</string>
    <string name="gesture_19_btn">gesture №19</string>
    <string name="gesture_20_btn">gesture №20</string>
    <string name="gesture_21_btn">gesture №21</string>
    <string name="gesture_22_btn">gesture №22</string>
    <string name="gesture_23_btn">gesture №23</string>
    <string name="gesture_24_btn">gesture №24</string>
    <string name="gesture_25_btn">gesture №25</string>
    <string name="test">test</string>
    <string name="setting_up_gestures">setting up gestures</string>
    <string name="sensor_settings">sensor settings</string>
    <string name="sensor_settingss">Sensor settings</string>
    <string name="special_settings">Special settings</string>
    <string name="service_settings">Service settings</string>
    <string name="driver_0_00v">driver: 0.00v</string>
    <string name="driver">"driver: "</string>
    <string name="bms_0_00v">bms: 0.00v</string>
    <string name="bms">"bms: "</string>
    <string name="sens_0_00v">sens: 0.00v</string>
    <string name="sens">"sens: "</string>
    <string name="open_threshold">open threshold</string>
    <string name="close_threshold">close threshold</string>
    <string name="opening_sensor_sensitivity">opening sensor sensitivity</string>
    <string name="closing_sensor_sensitivity">closing sensor sensitivity</string>
    <string name="settings_blocking">settings blocking</string>
    <string name="settings_blocking_massage">first disable the lockout</string>
    <string name="waiting_for_data_transfer_from_the_prosthesis">waiting for data transfer from the prosthesis</string>
    <string name="close_btn">close</string>
    <string name="open_btn">open</string>
    <string name="swap_sensors">swap sensors</string>
    <string name="swap_button_open_close">swap button open/close</string>
    <string name="single_channel_control">single channel control</string>
    <string name="reset_to_factory_settings">soft reset to factory settings</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="off_sw">off</string>
    <string name="on_sw">on</string>
    <string name="dialog_pin_app_varning">Enter 4 digits</string>
    <string name="min_shutdown_current">min compression force</string>
    <string name="shutdown_current">compression force</string>
    <string name="rotation_thumb">rotation thumb</string>
    <string name="thumb">thumb</string>
    <string name="forefinger">forefinger</string>
    <string name="middle_finger">middle finger</string>
    <string name="ring_finger">ring finger</string>
    <string name="little_finger">little finger</string>
    <string name="open_state">open</string>
    <string name="close_state">close</string>
    <string name="cancel_gripper_settings">Cancel</string>
    <string name="save_gripper_settings">Save</string>
    <string name="gesture">Gesture </string>
    <string name="hand_side">hand side</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="prostheses_update_ready_for_installation">Prostheses update</string>
    <string name="do_you_want_to_start_updating">A new version of the prostheses software is available. Do you want to install the updated firmware now?</string>
    <string name="updating_0">updating… </string>
    <string name="gesture_switching_by_sensors">gesture switching by sensors</string>
    <string name="switching_mode">switching mode</string>
    <string name="time_between_peaks">time between peaks</string>
    <string name="peak_time">peak time</string>
    <string name="gesture_state">Gesture state:</string>
    <string name="finger_position">Rotation:</string>
    <string name="rotation_state_close">inside</string>
    <string name="gesture_state_open">open state</string>
    <string name="not_calibrated_message">To calibrate it, go to the advanced settings.</string>
    <string name="not_calibrated">The prostheses is not calibrated</string>
    <string name="training">Training</string>
    <string name="ble_log_title">BLE Log</string>
    <string name="ble_log_empty">No BLE commands yet</string>
    <string name="ble_log_disable_graph_stream">Disable graph stream</string>
</resources>