<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_gestures"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_sensors"
        android:title="@string/title_dashboard"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/trophy"
        android:title="@string/training" />
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_mechanics"
        android:title="@string/special_settings" />
    <item
        android:id="@+id/page_secret"
        android:enabled="true"
        android:icon="@drawable/arrow_forward_24"
        android:title="@string/service_settings"
        android:visible="false"/>
    </group>
</menu>