<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/service_settings">
        <item
            android:id="@+id/action_Trigger0"
            android:icon="@android:drawable/ic_menu_manage"
            android:orderInCategory="100"
            android:title="@string/action_Trigger1"
            app:showAsAction="ifRoom"/>
    </group>
    <group
        android:id="@+id/modes">
        <item
            android:id="@+id/action_Trigger1"
            android:orderInCategory="100"
            android:title="@string/action_Trigger1"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_Trigger2"
            android:orderInCategory="100"
            android:title="@string/action_Trigger2"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_Trigger3"
            android:orderInCategory="100"
            android:title="@string/action_Trigger3"
            app:showAsAction="never"/>
<!--        <item-->
<!--            android:id="@+id/action_Trigger4"-->
<!--            android:orderInCategory="100"-->
<!--            android:title="@string/action_Trigger4"-->
<!--            app:showAsAction="never"/>-->
<!--        <item-->
<!--            android:id="@+id/action_Trigger5"-->
<!--            android:orderInCategory="100"-->
<!--            android:title="@string/action_Trigger5"-->
<!--            app:showAsAction="never"/>-->
<!--        <item-->
<!--            android:id="@+id/action_Trigger6"-->
<!--            android:orderInCategory="100"-->
<!--            android:title="@string/action_Trigger6"-->
<!--            app:showAsAction="never"/>-->
<!--        <item-->
<!--            android:id="@+id/action_Trigger7"-->
<!--            android:orderInCategory="100"-->
<!--            android:title="@string/action_Trigger7"-->
<!--            app:showAsAction="never"/>-->
        <item
            android:id="@+id/action_Trigger8"
            android:orderInCategory="100"
            android:title="@string/action_Trigger8"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_Trigger9"
            android:orderInCategory="100"
            android:title="одноканальный по датчику 1"
            app:showAsAction="never"/>
<!--    only first channel-->

        <item
            android:id="@+id/action_Trigger10"
            android:orderInCategory="100"
            android:title="одноканальный по датчику 2"
            app:showAsAction="never"/>
<!--    only first channel-->
    </group>

</menu>