<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.start.motorica.new_electronic_by_Rodeon.ui.activities.gripper.without_encoders.GripperSettingsWithoutEncodersGLSurfaceView
        android:id="@+id/gl_surface_view_le_without_encoders"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/gripper_use_le_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/save"
            android:layout_gravity="center"
            android:textColor="#FFFFFFFF"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="64dp"
        android:layout_gravity="bottom"
        android:weightSum="2"
        tools:ignore="DisableBaselineAlignment">
        <RelativeLayout
            android:id="@+id/gesture_state_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8">
                            <TextView
                                style="@style/Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/gesture_state" />


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2">

                    <Button
                        android:id="@+id/gripper_state_le"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/gesture_state_open"
                        android:layout_gravity="center"
                        android:textColor="#FFFFFFFF"
                        style="@style/Text"
                        android:background="@drawable/custom_button_le_border" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rotation_state_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8">


                            <TextView
                                android:id="@+id/swap_button_open_close_tv"
                                style="@style/Text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:text="@string/finger_position" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2">

                    <Button
                        android:id="@+id/gripper_position_finger_le"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:text="@string/rotation_state_close"
                        android:layout_gravity="center"
                        android:textColor="#FFFFFFFF"
                        style="@style/Text"
                        android:background="@drawable/custom_button_le_border" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>



</FrameLayout>