<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bleLogRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ubi4_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bleLogHeader"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bleLogTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_inter_semi_bold"
            android:text="@string/ble_log_title"
            android:textColor="@color/ubi4_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/graphStreamFilterContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bleLogTitleTv"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/graphStreamFilterTitleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/font_open_sans_regular"
                android:gravity="end"
                android:maxLines="2"
                android:text="@string/ble_log_disable_graph_stream"
                android:textColor="@color/ubi4_white"
                android:textSize="11sp" />

            <Switch
                android:id="@+id/graphStreamFilterSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:thumb="@drawable/switch_le_thumb"
                android:track="@drawable/ubi4_switch_truck" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/emptyTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/font_open_sans_regular"
        android:gravity="center"
        android:text="@string/ble_log_empty"
        android:textColor="@color/ubi4_deactivate_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bleLogHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bleLogRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bleLogHeader" />
</androidx.constraintlayout.widget.ConstraintLayout>
